# py-app-conf-demo

./: .flake8  README.md  pyproject.toml
myapp/: conf.py
